applications/identity-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-ui-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - identity.anasigorta.com.tr
    secretName: identity-ui-tls
  rules:
  - host: identity.anasigorta.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identity-ui-service
            port:
              number: 80
